# WeirdLang

./: CMakeLists.txt  README.md  code.wl  code.wrd  main.cpp
include/: AST.hpp  Lexer.hpp  NativeFunctions.hpp  Parser.hpp  Value.hpp
include/AST/: AST.hpp  Base.hpp  Scope.hpp  Value.hpp
src/: Lexer.cpp  Parser.cpp
testCode/: code.wrd  noBuiltinString.wrd
testCode/include/: string.wrd  vector.wrd
